# Study

Programming/Lab_3/: Code.pas
Programming/Lab_4.1/: Code.pas
Programming/Lab_4.2/: CMakeLists.txt  main.py  qlib.cpp  qlib.h  qlib.py
Programming/Lab_5/: generator.cpp  generator.h  main.py  sort_module.cpp  sort_module.h  sort_module.py
